WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232313
error event should be fired at <style> element when @import rule fails parsing due to MIME type
https://bugs.webkit.org/show_bug.cgi?id=232313
Summary
error event should be fired at <style> element when @import rule fails parsin...
Chris Dumez
Reported
2021-10-26 09:50:07 PDT
error event should be fired at <style> element when @import rule fails parsing due to MIME type.
Attachments
Patch
(5.57 KB, patch)
2021-10-26 09:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.82 KB, patch)
2021-10-26 11:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(13.98 KB, patch)
2021-10-26 13:31 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-10-26 09:53:44 PDT
Created
attachment 442501
[details]
Patch
Chris Dumez
Comment 2
2021-10-26 11:19:04 PDT
Created
attachment 442512
[details]
Patch
Darin Adler
Comment 3
2021-10-26 13:27:21 PDT
Comment on
attachment 442512
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=442512&action=review
> Source/WebCore/css/StyleRuleImport.cpp:78 > + if (!m_styleSheet->parseAuthorStyleSheet(cachedStyleSheet, document ? &document->securityOrigin() : nullptr)) {
These are so similar I think a boolean for success would be better: bool parseSucceeded = m_styleSheet->parseAuthorStyleSheet(cachedStyleSheet, document ? &document->securityOrigin() : nullptr); ... if (m_parentStyleSheet) { if (parseSucceeded) m_parentStyleSheet->notifyLoadedSheet(cachedStyleSheet); else m_parentStyleSheet->setLoadErrorOccured(); ...
Chris Dumez
Comment 4
2021-10-26 13:31:29 PDT
Created
attachment 442523
[details]
Patch
EWS
Comment 5
2021-10-26 14:36:18 PDT
Committed
r284898
(
243575@main
): <
https://commits.webkit.org/243575@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442523
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-10-26 14:37:19 PDT
<
rdar://problem/84681815
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug