error event should be fired at <style> element when @import rule fails parsing due to MIME type https://bugs.webkit.org/show_bug.cgi?id=232313

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/html/semantics/document-metadata/the-link-element/link-load-error-events-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-load-error-events.https-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-style-error-01-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-style-error-limited-quirks-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-link-element/link-style-error-quirks-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-style-element/style-error-01-expected.txt:

Source/WebCore:

StyleRuleImport was failing to check the result of StyleSheetContents::parseAuthorStyleSheet()
to make sure parsing actually succeeded and was thus not notifying its owner <style> element
of the failure.

No new tests, unskipped / rebaselined existing tests.

* css/StyleRuleImport.cpp:
(WebCore::StyleRuleImport::setCSSStyleSheet):

LayoutTests:

Unskip test that no longer times out.

* TestExpectations:


Canonical link: https://commits.webkit.org/243575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284898 268f45cc-cd09-0410-ab3c-d52691b4dbfc